# Indico-Solutions-Toolkit

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py  tox.ini
.github/workflows/: build.yml  python.yaml
docs/doctrees/: environment.pickle  index.doctree  modules.doctree  row_association.doctree  solutions_toolkit.doctree  solutions_toolkit.row_association.doctree
docs/html/: .buildinfo  genindex.html  index.html  modules.html  objects.inv  py-modindex.html  row_association.html  search.html  searchindex.js  solutions_toolkit.html  solutions_toolkit.row_association.html
docsrc/: conf.py  make.bat  modules.rst
examples/: add_files_to_dataset.py  add_teach_task.py  auto_classifier.py  auto_review_predictions.py  copy_teach_task.py  create_auto_classification_workflow.py  create_full_structure.py  create_teach_task.py  dataset_tasks.py  download_source,py  download_source.py  find_related_ids.py  ground_truth_metrics.py  manipulate_pdfs.py  merge_snapshots.py  model_metrics.py  partial_labels.py  pdf_highlighter.py  poll_auto_review.py  result_file_dataclasses.py  results_autoreview.py  results_dataclasses.py  results_to_csv.py  row_association.py  snapshots.py  staggered_loop.py  submitting_to_doc_extraction.py  submitting_to_workflow.py  user_metrics.py
indico_toolkit/: __init__.py  client.py  errors.py  retry.py
indico_toolkit/association/: __init__.py  association.py  extracted_tokens.py  line_items.py  positioning.py  splitting.py
indico_toolkit/auto_class/: __init__.py  classifier.py
indico_toolkit/auto_populate/: __init__.py  config.py  populator.py  queries.py  types.py
indico_toolkit/auto_review/: __init__.py  auto_reviewer.py  review_config.py
solutions_toolkit/: __init__.py  client.py
tests/: conftest.py  pytest.ini  retry.py  test_auto_review.py  test_create_client.py  test_indico_wrapper.py  test_integration.py  test_retry.py  test_row_association.py  test_split_merged_values.py  test_workflow.py
(+324 files in other folders)
