[build-system]
requires = ["flit_core >=2,<4"]
requires-python = ">=3.6"
build-backend = "flit_core.buildapi"

[tool.flit.metadata]
module = "indico_toolkit"
author = "indico"
author-email = "scott.levin@indico.io"
home-page = "https://github.com/IndicoDataSolutions/Indico-Solutions-Toolkit"
classifiers = [ "License :: OSI Approved :: MIT License",]
description-file = "README.md"

