[build-system]
requires = [
    "flit_core >=2,<4",
    ]
requires-python = ">=3.6"
build-backend = "flit_core.buildapi"

[tool.flit.metadata]
module = "indico_toolkit"
author = "indico"
author-email = "scott.levin@indico.io"
home-page = "https://github.com/IndicoDataSolutions/Indico-Solutions-Toolkit"
classifiers = [ "License :: OSI Approved :: MIT License",]
description-file = "README.md"
requires = [
    "indico-client>=5.1.4",
    "plotly==5.2.1",
    "tqdm==4.50.0",
    "faker==13.3.3",
    "python-dateutil==2.8.1"
]

[tool.flit.metadata.requires-extra]
test = [
    "pytest>=5.2.1", 
    "requests-mock>=1.7.0-7", 
    "pytest-dependency==0.5.1"
]
full = [
    "PyMuPDF==1.19.6", "spacy>=3.1.4,<4"
]
